--- a/subevents/anunaad/index.html
+++ b/subevents/anunaad/index.html
@@ -174,8 +174,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -237,8 +237,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -301,8 +301,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -363,8 +363,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="anunaad.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -421,8 +421,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<center><a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<center><a href="anunaad.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a></center>
 						</div>
