--- a/subevents/rangmanch/index.html
+++ b/subevents/rangmanch/index.html
@@ -101,10 +101,10 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link">
-									<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
-									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-								</a>
+								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+							</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -166,10 +166,10 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link">
-									<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
-									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-								</a>
+								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+							</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -233,10 +233,10 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link">
-									<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
-									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-								</a>
+								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+							</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -297,10 +297,10 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link">
-									<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
-									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-								</a>
+								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
+								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+							</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
