--- a/subevents/spandhan/index.html
+++ b/subevents/spandhan/index.html
@@ -99,8 +99,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="spandan.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -163,8 +163,8 @@ It's about something else that comes from within you. "</i></span><span class="
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="spandan.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -228,8 +228,8 @@ It's about something else that comes from within you. "</i></span><span class="
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a href="spandan.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
