--- a/subevents/razmatazz/index.html
+++ b/subevents/razmatazz/index.html
@@ -99,8 +99,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="razmatazz.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -162,8 +162,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="razmatazz.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -227,8 +227,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a href="razmatazz.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -289,8 +289,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+							<a href="razmatazz.pdf"  target="_blank" class="section__more-link">
+								<span class="section__more-linktext"><b>CLICK HERE</b></span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
