--- a/subevents/razmatazz/index.html
+++ b/subevents/razmatazz/index.html
@@ -10,9 +10,12 @@
 	<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
 	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	<link rel="stylesheet" type="text/css" href="css/footer.css" />
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
@@ -346,6 +349,65 @@
 
 			</div><!--/ sections -->
 		</main>
+	<footer>
+
+		<!--For links-->
+		<div class="row">
+			<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+						<h2>&nbsp;&nbsp;Culrav-Logo</h2>
+						<button class="logo"><a><i class="fa  fa-fw fa-facebook"></i></a></button>
+						<button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button>
+					</div>
+					<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+						<h4><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h4>
+						<h4><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>   817-597-1936,807-656-6861 </h4>
+						<h4><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> culrav@mnnit.ac.in </h4>
+						<br>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6" id="links">
+				<div class="row">
+					<div class="col-xs-12 col-sm-12" align="center" id="title">
+						<strong>Events</strong>
+					</div>
+				</div>
+				<div class="row last_row">
+					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+						<ul style="list-style: none;">
+							<li><a class="footer_links">Rangmanch</a></li>
+							<li><a class="footer_links">Rangsaazi</a></li>
+							<li><a class="footer_links">Litmuse</a></li>
+							<li><a class="footer_links">Literary (Hindi Events)</a></li>
+						</ul>
+					</div>
+					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+						<ul style="list-style: none;">
+							<!--<li><strong>Navigate</strong></li>-->
+							<!--<li><a class="footer_links">Home</a></li>-->
+							<!--<li><a class="footer_links">About</a></li>-->
+							<!--<li><a class="footer_links">FAQs</a></li>-->
+							<!--<li><a class="footer_links">Register</a></li>-->
+							<li><a class="footer_links">Spandan</a></li>
+							<li><a class="footer_links">Razmatazz</a></li>
+							<li><a class="footer_links">Dark Room</a></li>
+							<li><a class="footer_links">Anunaad</a></li>
+
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--For copyright-->
+		<div class="row">
+			<hr width="80%">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-10 footer-company-name"><center>Copyright © Culrav 2018. All rights reserved</center></div>
+			<div class="col-sm-1"></div>
+		</div>
+	</footer>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/charming.min.js"></script>
 		<script src="js/anime.min.js"></script>
