--- a/events/index.html
+++ b/events/index.html
@@ -14,7 +14,9 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<link rel="stylesheet" type="text/css" href="css/slider.css" />
+	<link rel="stylesheet" type="text/css" href="css/footer.css" />
 	<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
 	<script
@@ -23,7 +25,7 @@
 	crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	<script src="../../codrops/adpacks/analytics.js"></script>
+	<!--<script src="../../codrops/adpacks/analytics.js"></script>-->
 </head>
 <body class="demo-1">
 
@@ -95,7 +97,7 @@
 				</div>
 				<div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/spandan.jpg" alt="">
-					<h2 class="pieces-slider__text">Spandhan</h2>
+					<h2 class="pieces-slider__text">Spandan</h2>
 				</div>
 				<div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/razmatazz.jpg" alt="">
@@ -112,11 +114,71 @@
 				<!-- Canvas to draw the pieces -->
 				<canvas class="pieces-slider__canvas"></canvas>
 				<!-- Slider buttons: prev and next -->
-				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev"></img>
-				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next"></img>
+				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev">
+				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next">
 			</div>
 		</div>
+
 	</main>
+	<footer>
+
+		<!--For links-->
+		<div class="row">
+			<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+				<div class="row">
+					<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+						<h2>&nbsp;&nbsp;Culrav-Logo</h2>
+						<button class="logo"><a><i class="fa  fa-fw fa-facebook"></i></a></button>
+						<button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button>
+					</div>
+					<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+						<h4><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h4>
+						<h4><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>   817-597-1936,807-656-6861 </h4>
+						<h4><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> culrav@mnnit.ac.in </h4>
+						<br>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6" id="links">
+				<div class="row">
+					<div class="col-xs-12 col-sm-12" align="center" id="title">
+						<strong>Events</strong>
+					</div>
+				</div>
+				<div class="row last_row">
+					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+						<ul style="list-style: none;">
+							<li><a class="footer_links">Rangmanch</a></li>
+							<li><a class="footer_links">Rangsaazi</a></li>
+							<li><a class="footer_links">Litmuse</a></li>
+							<li><a class="footer_links">Literary (Hindi Events)</a></li>
+						</ul>
+					</div>
+					<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+						<ul style="list-style: none;">
+							<!--<li><strong>Navigate</strong></li>-->
+							<!--<li><a class="footer_links">Home</a></li>-->
+							<!--<li><a class="footer_links">About</a></li>-->
+							<!--<li><a class="footer_links">FAQs</a></li>-->
+							<!--<li><a class="footer_links">Register</a></li>-->
+							<li><a class="footer_links">Spandan</a></li>
+							<li><a class="footer_links">Razmatazz</a></li>
+							<li><a class="footer_links">Dark Room</a></li>
+							<li><a class="footer_links">Anunaad</a></li>
+
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--For copyright-->
+		<div class="row">
+			<hr width="80%">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-10 footer-company-name"><center>Copyright © Culrav 2018. All rights reserved</center></div>
+			<div class="col-sm-1"></div>
+		</div>
+	</footer>
 	<script>
 	$('body').mousemove(function(e){
 		var amountMovedX = (e.pageX * -1 / 15);
