Add links to header

--- a/team/index.html
+++ b/team/index.html
@@ -34,28 +34,28 @@
 
 
 	<div class="header-nightsky">
-		<nav class="navbar navbar-default navbar-static-top ">
-			<div class="container">
-				<a class="navbar-brand" href="#">LOGO</a>
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
+					<nav class="navbar navbar-default navbar-static-top ">
+						<div class="container">
+							<a class="navbar-brand" href="#">LOGO</a>
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+							</div>
+							<div class="collapse navbar-collapse" id="myNavbar">
+								<ul class="nav navbar-nav navbar-right">
+									<li><a href="../index.html">HOME</a></li>
+									<li><a href="../events/index.html">EVENTS</a></li>
+									<li><a href="../schedule/index.html">SCHEDULE</a></li>
+									<li><a href="../sponsors/index.html">SPONSORS</a></li>
+									<li><a href="../team/index.html">TEAM</a></li>
+								</ul>
+							</div>
+						</div>
+					</nav>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://www.culrav.in">HOME</a></li>
-						<li><a href="">EVENTS</a></li>
-						<li><a href="">SPONSORS</a></li>
-						<li><a href="">TEAM</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</div>
-
 
 
 	<div class="row">
