--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-			<script src="./js/anime.min.js"></script>
-		<script src="./js/imagesloaded.pkgd.min.js"></script>
-		<script src="./js/main.js"></script>
+	<script src="./js/anime.min.js"></script>
+	<script src="./js/imagesloaded.pkgd.min.js"></script>
+	<script src="./js/main.js"></script>
 
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -61,28 +61,29 @@
 
 
 
-	<div class="header-nightsky">
-		<nav class="navbar navbar-default navbar-static-top ">
-			<div class="container">
-				<a class="navbar-brand" href="#">LOGO</a>
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
+				<div class="header-nightsky" style="display:none">
+					<nav class="navbar navbar-default navbar-static-top ">
+						<div class="container">
+							<a class="navbar-brand" href="#">LOGO</a>
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+							</div>
+							<div class="collapse navbar-collapse" id="myNavbar">
+								<ul class="nav navbar-nav navbar-right">
+									<li><a href="#">HOME</a></li>
+									<li><a href="./events/index.html">EVENTS</a></li>
+									<li><a href="./schedule/index.html">SCHEDULE</a></li>
+									<li><a href="./sponsors/index.html">SPONSORS</a></li>
+									<li><a href="./team/index.html">TEAM</a></li>
+								</ul>
+							</div>
+						</div>
+					</nav>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://www.culrav.in">HOME</a></li>
-						<li><a href="">EVENTS</a></li>
-						<li><a href="">SPONSORS</a></li>
-						<li><a href="">TEAM</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</div>
 
 
 				<!-- <div class="center menu" style="">
@@ -169,6 +170,7 @@
 <script>
 setTimeout(function(){
 	$('.btn--trigger').trigger('click');
+	$('.header-nightsky').show(1000,"linear")
 },500);
 </script>
 
