--- a/subevents/anunaad/index.html
+++ b/subevents/anunaad/index.html
@@ -15,11 +15,12 @@
 	src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-	 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
-	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	
 	<link rel="stylesheet" type="text/css" href="css/footer.css" />
 
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
@@ -98,22 +99,23 @@
 
 
 			<!-- menu -->
-				<nav class="menu">
-					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="#">Home</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Events</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Sponsors</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Team</a></li>
-					</ul>
-					<div class="menu__toggle">
-						<span class="menu__toggle-inner menu__toggle-inner--open">
-							<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
-						</span>
-						<span class="menu__toggle-inner menu__toggle-inner--close">
-							<i class="fa fa-times"></i>
-						</span>
-					</div>
-				</nav>
+			<nav class="menu">
+				<ul class="menu__inner">
+					<li class="menu__item"><a class="menu__item-link" href="../index.html">Home</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../events">Events</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../team">Team</a></li>
+				</ul>
+				<div class="menu__toggle">
+					<span class="menu__toggle-inner menu__toggle-inner--open">
+						<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
+					</span>
+					<span class="menu__toggle-inner menu__toggle-inner--close">
+						<i class="fa fa-times"></i>
+					</span>
+				</div>
+			</nav>
 
 
 
@@ -124,9 +126,9 @@
 
 
 
-				<!-- facts expander with toggles; content for each is in its section -->
-				<div class="facts">
-					<div class="facts__toggle">
+			<!-- facts expander with toggles; content for each is in its section -->
+			<div class="facts">
+				<div class="facts__toggle">
 						<!-- <span class="facts__toggle-inner facts__toggle-inner--more">
 							<svg class="icon icon--dot"><use xlink:href="#icon-dot"></use></svg>
 							<span class="facts__toggle-text">See more facts</span>
@@ -470,66 +472,96 @@
 
 
 			</div><!--/ sections -->
+
+
+
+
+
+			<footer>
+
+				<!--For links-->
+				<div class="row">
+					<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+						<div class="row">
+							<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+								<h2>&nbsp;&nbsp;Culrav</h2>
+								<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class="fa  fa-fw fa-facebook"></i></a></button>
+								<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
+							</div>
+							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
+								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
+								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
+								<br>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6" id="links">
+						<div class="row">
+							<div class="col-xs-12 col-sm-12" align="center" id="title">
+								<strong>Other</strong>
+							</div>
+						</div>
+						<div class="row last_row">
+							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+								<ul style="list-style: none;">
+									<li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
+									<li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
+									<li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+									<li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+								</ul>
+							</div>
+							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+								<ul style="list-style: none;">
+									<!--<li><strong>Navigate</strong></li>-->
+									<!--<li><a class="footer_links">Home</a></li>-->
+									<!--<li><a class="footer_links">About</a></li>-->
+									<!--<li><a class="footer_links">FAQs</a></li>-->
+									<!--<li><a class="footer_links">Register</a></li>-->
+									<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
+									<!-- <li><a class="footer_links">Razmatazz</a></li>
+									<li><a class="footer_links">Dark Room</a></li>
+									<li><a class="footer_links">Anunaad</a></li> -->
+
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--For copyright-->
+				<div class="row">
+					<hr width="80%">
+					<div class="col-sm-1"></div>
+					<div class="col-sm-10 footer-company-name"><center>Copyright © Culrav 2018. All rights reserved</center></div>
+					<div class="col-sm-1"></div>
+				</div>
+			</footer>
+
+
+
+
+
+
+
+
+
+
 		</main>
-		<footer>
 
-			<!--For links-->
-			<div class="row">
-				<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
-					<div class="row">
-						<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
-							<h2>&nbsp;&nbsp;Culrav-Logo</h2>
-							<button class="logo"><a><i class="fa  fa-fw fa-facebook"></i></a></button>
-							<button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button>
-						</div>
-						<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
-							<h4><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h4>
-							<h4><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>   817-597-1936,807-656-6861 </h4>
-							<h4><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> culrav@mnnit.ac.in </h4>
-							<br>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-12 col-md-6" id="links">
-					<div class="row">
-						<div class="col-xs-12 col-sm-12" align="center" id="title">
-							<strong>Events</strong>
-						</div>
-					</div>
-					<div class="row last_row">
-						<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
-							<ul style="list-style: none;">
-								<li><a class="footer_links">Rangmanch</a></li>
-								<li><a class="footer_links">Rangsaazi</a></li>
-								<li><a class="footer_links">Litmuse</a></li>
-								<li><a class="footer_links">Literary (Hindi Events)</a></li>
-							</ul>
-						</div>
-						<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
-						<ul style="list-style: none;">
-							<!--<li><strong>Navigate</strong></li>-->
-							<!--<li><a class="footer_links">Home</a></li>-->
-							<!--<li><a class="footer_links">About</a></li>-->
-							<!--<li><a class="footer_links">FAQs</a></li>-->
-							<!--<li><a class="footer_links">Register</a></li>-->
-							<li><a class="footer_links">Spandan</a></li>
-							<li><a class="footer_links">Razmatazz</a></li>
-							<li><a class="footer_links">Dark Room</a></li>
-							<li><a class="footer_links">Anunaad</a></li>
 
-						</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!--For copyright-->
-			<div class="row">
-			<hr width="80%">
-			<div class="col-sm-1"></div>
-			<div class="col-sm-10 footer-company-name"><center>Copyright © Culrav 2018. All rights reserved</center></div>
-			<div class="col-sm-1"></div>
-			</div>
-		</footer>
+
+
+
+
+
+		
+
+
+
+
+
+
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/charming.min.js"></script>
 		<script src="js/anime.min.js"></script>
