Modify footer and add links

--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -31,10 +31,11 @@
 			<!-- menu -->
 			<nav class="menu">
 				<ul class="menu__inner">
-					<li class="menu__item"><a class="menu__item-link" href="#">Home</a></li>
-					<li class="menu__item"><a class="menu__item-link" href="#">Events</a></li>
-					<li class="menu__item"><a class="menu__item-link" href="#">Sponsors</a></li>
-					<li class="menu__item"><a class="menu__item-link" href="#">Team</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../index.html">Home</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../events">Events</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../team">Team</a></li>
 				</ul>
 				<div class="menu__toggle">
 					<span class="menu__toggle-inner menu__toggle-inner--open">
