Modify Events Page

--- a/events/index.html
+++ b/events/index.html
@@ -64,30 +64,15 @@
 
 	<style type="text/css">
 
-		#linkToEvent {
-		position: absolute;
-		    font-size: 1.5em;
-		    z-index: 1000000;
-		    height: 40px;
-		    width: 150px;
-		    background-color: #1c1c31;
-		    cursor: pointer;
-		    line-height: 40px;
-		    /* left: 45vw; */
-		    /* top: 40vh; */
-		    /* right: auto; */
-		    right: 35vw;
-		    top: 35vh;
-		}
+	
 
 	</style>
 <center>
 	<div id="titleDiv">
 		<div class="title">
 			EVENTS
-			
 		</div>
-		<a href="rangmach.html" id="linkToEvent">Visit event</a>
+		<a href="../subevents/rangmanch/index.html" id="linkToEvent">KNOW MORE</a>
 	</div>
 </center>
 
