--- a/index/index.html
+++ b/index/index.html
@@ -17,11 +17,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	
-	
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
-	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 
 	<!-- <link rel="stylesheet" type="text/css" href="css/navbar.css" /> -->
 	<script
@@ -29,7 +28,10 @@
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-	
+			<script src="./js/anime.min.js"></script>
+		<script src="./js/imagesloaded.pkgd.min.js"></script>
+		<script src="./js/main.js"></script>
+
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->
@@ -50,17 +52,37 @@
 		<body class="demo-6">
 
 
-
 			
 
 
 
 
-			<main>
+			<main style="background-image: url(img/bg6.jpg);background-size: cover;">
 
 
 
-
+	<div class="header-nightsky">
+		<nav class="navbar navbar-default navbar-static-top ">
+			<div class="container">
+				<a class="navbar-brand" href="#">LOGO</a>
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="https://www.culrav.in">HOME</a></li>
+						<li><a href="">EVENTS</a></li>
+						<li><a href="">SPONSORS</a></li>
+						<li><a href="">TEAM</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
 
 
 				<!-- <div class="center menu" style="">
@@ -72,7 +94,7 @@
 
 
 			<!-- Initial markup -->
-			<div class="segmenter" style="background-image: url(img/bg6.jpg)">
+			<div class="segmenter" >
 
 				
 
@@ -89,7 +111,7 @@
 
 
 
-			<center><h2 class="trigger-headline trigger-headline--hidden" style="font-family:flesh;color:#F28B04;letter-spacing:5vw;font-size:10vw;">
+			<center><h2 class="trigger-headline trigger-headline--hidden" style="font-family:flesh;color:#F28B04;letter-spacing:5vw;font-size:10vw;margin-top:20px">
 				<span>CULRAV<br><span style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-size:3vw;font-weight:300"><i class="slogan">"Tryst With Darkness"</i></span>
 				<br><span style="font-family:Chewy;color:white;letter-spacing:0.5vw;font-size:3vw;">21<sup>st</sup>-24<sup>th</sup> March 2018</span>
 				<br><span style="font-family:Electrolize;color:white;letter-spacing:0.3vw;font-size:1.5vw;margin-left:-5%">Motilal Nehru National Institute Of Technology, Allahabad</span>
@@ -102,9 +124,6 @@
 
 
 
-		<script src="js/anime.min.js"></script>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/main.js"></script>
 
 
 		<script>
