--- a/events/index.html
+++ b/events/index.html
@@ -76,47 +76,53 @@
 			<div class="pieces-slider">
 				<!-- Each slide with corresponding image and text -->
 				
-				<div class="pieces-slider__slide">
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/rangmanch.jpg" alt="">
 					<h2 class="pieces-slider__text">Rangmanch</h2>
 				</div>
+				</a>
 
-
-				<div class="pieces-slider__slide">
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/rangsaazi.jpg" alt="">
 					<h2 class="pieces-slider__text">Rangsaazi</h2>
 				</div>
+			</a>
 
 
-				<div class="pieces-slider__slide">
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/litmuse.jpg" alt="">
 					<h2 class="pieces-slider__text">Litmuse</h2>
 				</div>
-				<div class="pieces-slider__slide">
+			</a>
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/hindi.jpg" alt="">
 					<h2 class="pieces-slider__text">Literary (Hindi Events)</h2>
 				</div>
-				<div class="pieces-slider__slide">
+			</a>
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/spandan.jpg" alt="">
 					<h2 class="pieces-slider__text">Spandan</h2>
 				</div>
-				<div class="pieces-slider__slide">
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/razmatazz.jpg" alt="">
 					<h2 class="pieces-slider__text">Razmatazz</h2>
 				</div>
-				<div class="pieces-slider__slide">
+			</a>
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/darkroom.jpg" alt="">
 					<h2 class="pieces-slider__text">Dark Room</h2>
 				</div>
-				<div class="pieces-slider__slide">
+			</a>
+				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/anunaad.jpg" alt="">
 					<h2 class="pieces-slider__text">Anunaad</h2>
 				</div>
+			</a>
 				<!-- Canvas to draw the pieces -->
 				<canvas class="pieces-slider__canvas"></canvas>
 				<!-- Slider buttons: prev and next -->
-				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev">
-				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next">
+				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev left">
+				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next right">
 			</div>
 		</div>
 
