--- a/events/index.html
+++ b/events/index.html
@@ -26,6 +26,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	<!--<script src="../../codrops/adpacks/analytics.js"></script>-->
+
 </head>
 <body class="demo-1">
 
@@ -59,11 +60,33 @@
 
 
 
+	<style type="text/css">
 
+		#linkToEvent {
+		position: absolute;
+		    font-size: 1.5em;
+		    z-index: 1000000;
+		    height: 40px;
+		    width: 150px;
+		    background-color: #1c1c31;
+		    cursor: pointer;
+		    line-height: 40px;
+		    /* left: 45vw; */
+		    /* top: 40vh; */
+		    /* right: auto; */
+		    right: 35vw;
+		    top: 35vh;
+		}
+
+	</style>
 <center>
-<div class="title">
-	EVENTS
-</div>
+	<div id="titleDiv">
+		<div class="title">
+			EVENTS
+			
+		</div>
+		<a href="rangmach.html" id="linkToEvent">Visit event</a>
+	</div>
 </center>
 
 
@@ -76,11 +99,11 @@
 			<div class="pieces-slider">
 				<!-- Each slide with corresponding image and text -->
 				
-				<a href="#"><div class="pieces-slider__slide">
+				<div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/rangmanch.jpg" alt="">
-					<h2 class="pieces-slider__text">Rangmanch</h2>
+					<a href="#"><h2 class="pieces-slider__text">Rangmanch</h2></a>
 				</div>
-				</a>
+				
 
 				<a href="#"><div class="pieces-slider__slide">
 					<img class="pieces-slider__image" src="img/rangsaazi.jpg" alt="">
@@ -125,6 +148,7 @@
 				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next right">
 			</div>
 		</div>
+
 
 	</main>
 	<footer>
