--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 
-			<main style="background-image: url(img/bg6.jpg);background-size: cover;">
+			<main style="background-image: url(./img/bg6.jpg);background-size: cover;">
 
 
 
