--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;font-size:2em;">
 						CULRAV
 					</h2>
-					<p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-size:1.5em;font-weight:300">
+					<p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-size:1.0em;font-weight:300">
 						<i class="slogan">"Tryst With Darkness"</i>
 					</p>
 					<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;font-size:0.5em;margin-top: 5px;">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
@@ -98,6 +98,7 @@
 						<a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
 						<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
 						<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
+						<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a>
 					</p>
 					<p style="font-family:Electrolize;color:white;letter-spacing:0.3vw;font-size:0.3em;margin-top: 20px">Motilal Nehru National Institute Of Technology, Allahabad</p>
 				</div>
