Modify link to footer css

--- a/events/index.html
+++ b/events/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/slider.css" />
 	
 	<link rel="stylesheet" type="text/css" href="pater/pater.css" />
-	<link rel="stylesheet" type="text/css" href="css/footer.css" />
+	<link rel="stylesheet" type="text/css" href="../css/footer.css" />
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
