--- a/subevents/anunaad/index.html
+++ b/subevents/anunaad/index.html
@@ -101,7 +101,7 @@
 			<!-- menu -->
 			<nav class="menu">
 				<ul class="menu__inner">
-					<li class="menu__item"><a class="menu__item-link" href="../index.html">Home</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../index.html">Home</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../events">Events</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
