--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -31,7 +31,7 @@
 			<!-- menu -->
 			<nav class="menu">
 				<ul class="menu__inner">
-					<li class="menu__item"><a class="menu__item-link" href="../index.html">Home</a></li>
+					<li class="menu__item"><a class="menu__item-link" href="../../index.html">Home</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../events">Events</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
@@ -283,7 +283,7 @@
 						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner"> </span></p>
 					</div>
 					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/doodling.jpeg);background-size:contain;background-repeat:no-repeat"></div>
+						<div class="section__img-inner" style="background-image: url(img/site.jpg);background-size:contain;background-repeat:no-repeat"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
