Add team button to landing page

--- a/index.html
+++ b/index.html
@@ -169,14 +169,15 @@
 					<h2  style="font-family:flesh;color:#F28B04;letter-spacing:1vw;" class="event-name">
 						CULRAV
 					</h2>
-					<p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
-						<i class="slogan">"Tryst With Darkness"</i>
-					</p>
+					<center><p style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-weight:300" class="slogan">
+						<i class="slogan">"A Tryst With Darkness"</i>
+					</p></center>
 					<p style="font-family:Chewy;color:white;letter-spacing:0.5vw;;margin-top: 5px;" class="event-date">21<sup>st</sup>-24<sup>th</sup> March 2018</p>
 					<p style="display:flex;flex-wrap: wrap;">
-						<a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
+						<center><a href="./events/index.html" id="linkToEvent"><button class="btn">Events</button></a>
 						<a href="./sponsors/index.html" id="linkToEvent"><button class="btn">Sponsors</button></a>
 						<a href="./schedule/index.html" id="linkToEvent"><button class="btn">Schedule</button></a>
+						<a href="./team/index.html" id="linkToEvent"><button class="btn">Team</button></a></center>
 					</p>
 					<p style="font-family:Electrolize;color:white;letter-spacing:0.3vw;margin-top: 20px" class="college-name">Motilal Nehru National Institute Of Technology, Allahabad</p>
 				</div>
