Modify Meta data

--- a/events/index.html
+++ b/events/index.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Events | Culrav | MNNIT</title>
-	<meta name="description" content="A slider made with the Pieces library where slides are animated in a fragmented look." />
-	<meta name="keywords" content="slideshow, slider, pieces, fragments, animation, svg, canvas, javascript" />
-	<meta name="author" content="Luis Manuel for Codrops" />
+	<meta name="description" content="Information about different events under Culrav" />
+	<meta name="keywords" content="culrav,events,anunaad,rangmanch,rangsaazi,darkroom,literary,litmuse,razmatazz,spandhan" />
+	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
