--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Culrav | MNNIT </title>
-	<meta name="description" content="Background image segment effect" />
-	<meta name="keywords" content="css, html, backgorund image, effect, boxes, segments" />
-	<meta name="author" content="Codrops" />
+	<meta name="description" content="The end of March will corroborate to be a week of euphoria and fresh ideation, a resplendent rostrum to hone ones flair and virtuosity and bask in the glory of triumph and merriment,
+known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National Institute of Technology Allahabad." />
+	<meta name="keywords" content="culrav,MNNIT,ALlahabad,Cultural Fest" />
+	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy:400,700" rel="stylesheet">
