--- a/subevents/litmuse/index.html
+++ b/subevents/litmuse/index.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Anunaad | Culrav | MNNIT</title>
-	<meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
-	<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
-	<meta name="author" content="Codrops" />
+	<meta name="description" content="LITMUSE" />
+	<meta name="keywords" content="culrav,litmuse" />
+	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
 	
 	<script
