--- a/subevents/rangmanch/index.html
+++ b/subevents/rangmanch/index.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rangmanch | Culrav | MNNIT</title>
-	<meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
-	<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
-	<meta name="author" content="Codrops" />
+	<meta name="description" content="Rangmanch" />
+	<meta name="keywords" content="culrav,rangmanch" />
+	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
