--- a/subevents/razmatazz/index.html
+++ b/subevents/razmatazz/index.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Razmatazz | Culrav | MNNIT</title>
-	<meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
-	<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
-	<meta name="author" content="Codrops" />
+	<meta name="description" content="Razmatazz" />
+	<meta name="keywords" content="culrav,razmatazz" />
+	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
